# Transformer

./: README.md  pyproject.toml  requirements.txt
gemini/: embedding.ipynb  sementicsearch.ipynb
huggingface/: embedding.ipynb  imageembedding.ipynb  keywordsearch.ipynb
openapi/: embedding.ipynb
